5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1724_2518.log
== TEST (2019-05-14 15:13:31) 
-- CODE:
n = int(input"numero")

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int(input"numero")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:13:33) 
-- CODE:
n = int(input"numero")

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int(input"numero")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:13:45) 
-- CODE:
n = int(input"numero")

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int(input"numero")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:14:18) 
-- CODE:
n = int(input"numero")

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int(input"numero")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:14:19) 
-- CODE:
n = int(input"numero")

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int(input"numero")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:14:39) 
-- CODE:
n = int(input"numero")

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int(input"numero")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:14:45) 
-- CODE:
n = int(input"numero")

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int(input"numero")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:15:14) 
-- CODE:
n = int((input"numero"))

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- ERROR:
File "XXXX", line 1
    n = int((input"numero"))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:15:41) 
-- CODE:
n = int((input("numero")))

if(n/2 == 0):
	while(n != 1):
		n1 = n/2
		print(n1)
else:
	while(n != 1):
		n1 = n * 3 + 1
		print(n1)
		
-- OUTPUT:
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
